lista/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

:root {
    --primary-clr: #4E73DF;
    --secondary-clr: #e7e7e7;
    --tertiary-clr: #646464;
    --list-item-clr: #6a6a6a;
    --search-btn-clr: #b8b8b8;
    --search-bg: #d6d6d6;
    --modal-bg: rgba(0,0,0,.7);

    --heading-size: 1.3125rem;
    --heading-weight: 400;

    --assistive-text-weight: 500;
    --assistive-text-size: 0.625rem;

    --placeholder-weight: 500;
    --placeholder-size: 0.75rem;

    --list-cname-weight: 600;
    --list-cname-size: 0.9375rem;

    --container-border-radius: 30px;
}

html {font-family: 'Montserrat', sans-serif !important;}

body {
    background-color: var(--secondary-clr);
}

/* inner wrapper  */

.inner-wrapper {
    background-color: var(--secondary-clr);
}

/* search  */


.search-bg {
    background-color: var(--search-bg) !important;
}


/* list  */

.list-wrapper {
    margin: 2em;
}

.list {
    overflow-x: scroll;
    min-height: auto;
    margin: 0 0 2em 0;
}

th {
    white-space: nowrap;
    padding: 2em 1em !important;
    color: var(--list-item-clr);
    font-weight: var(--list-cname-weight);
}

td {
    white-space: nowrap;
}

.table-text-clr {
    color: var(--list-item-clr);
}

/* modal  */

.bg-modal {
    width: 100%;
    height: 100%;
    background-color: var(--modal-bg);
    position: absolute;
    top: 0;
    z-index: 5;
    display: flex;
    justify-content: space-around;
    align-items: center;
    overflow: hidden;
}


.regjistrimi-wrapper {
    margin: 2em;
    max-height: auto;
}

.row-margin {
    margin: 0em 3em 0em 0em;
}

.submit-margin {
    margin: 1.6em 0 0 100%;
}

.mybox {
    background-color: rebeccapurple;
    margin: 1em 0 0 0;
    width: 100%;
    height: 100%;
}

.row {
    padding-bottom: 1em;
}

.form-label {
    overflow: hidden;
}

